--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tsconfig/svelte": "^2.0.1",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.7",
+    "svelte-highlight": "^5.2.2",
     "svelte-preprocess": "^4.9.8",
     "tslib": "^2.3.1",
     "typescript": "^4.5.4",
@@ -22,6 +23,7 @@
     "windicss": "^3.5.1"
   },
   "dependencies": {
+    "@fontsource/fira-code": "^4.5.5",
     "@fontsource/poppins": "^4.5.2",
     "svelte-navigator": "^3.1.5"
   }
